# game-of-life

./: .gitignore  README.md  pyproject.toml
src/game_of_life/: __main__.py
src/game_of_life/core/: board.py  loop_life.py  next_board.py
src/game_of_life/interfaces/: basic.py  choose_interface.py  curses_ui.py
src/game_of_life/interfaces/curses/: curses_ui.py  game_screen.py  title_screen.py  transition.py
tests/: test_rules.py
