[project]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = [
    {name = "qdiazblanco",email = "qdiazblanco@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "windows-curses (>=2.4.1,<3.0.0) ; platform_system == \"Windows\""
]

[tool.poetry]
packages = [{include = "game_of_life", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
